--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
 .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+    width: 960px;
+    height: 960px;
+    border: thin solid black;
 }
 
-div {
-    height: 300px;
-    width: 300px;
+.cell {
+    width: 100%;
+    height: 100%;
+    border: 1px solid ;
+    box-sizing: border-box;
+}
+
+.hoverColor {
+    background: yellow;
 }
